@@ -13,7 +13,7 @@ module Searchgasm
         
         # Please see order_as_links. All options are the same and applicable here. The only difference is that instead of a group of links, this gets returned as a select form element that will perform the same function when the value is changed.
         def order_as_select(options = {})
-          add_order_by_select_defaults!(options)
+          add_order_as_select_defaults!(options)
           searchgasm_state_for(:order_as, options) + select(options[:params_scope], :order_as, options[:choices], options[:tag], options[:html])
         end
         
@@ -59,7 +59,7 @@ module Searchgasm
             options[:tag] ||= {}
             options[:tag][:object] = options[:search_obj]
             
-            url = searchgasm_url(:literal_search_params => {option => "'+this.value+'"})
+            url = searchgasm_url(options.merge(:literal_search_params => {option => "'+this.value+'"}))
             
             options[:html][:onchange] ||= ""
             options[:html][:onchange] += ";"
